tests/samples/negative/modules/module_mangle_abi_collision.ax
module module_mangle_abi_collision;

import mangle_collision.a.b_c as left;
import mangle_collision.a_b.c as right;

fn main() -> i32 {
  return left.f() + right.f();
}
